--- a/Activate Neuron.ipynb
+++ b/Activate Neuron.ipynb
@@ -9,11 +9,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jiayun/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n",
-      "/Users/jiayun/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
+      "/Users/jiayun/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:523: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/Users/jiayun/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:524: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/Users/jiayun/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/Users/jiayun/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/Users/jiayun/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/Users/jiayun/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:532: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
      ]
     }
    ],
@@ -34,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# util function to convert a tensor into a valid image\n",
@@ -87,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dimensions of the generated pictures for each filter.\n",
@@ -104,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -119,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fil = pd.read_csv('filter.csv')\n",
@@ -132,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,33 +153,33 @@
      "output_type": "stream",
      "text": [
       "Processing model 0\n",
-      "Current loss value: 3.5902905\n",
-      "Current loss value: 3041.2837\n",
-      "Current loss value: 7314.605\n",
-      "Current loss value: 12213.682\n",
-      "Current loss value: 17170.094\n",
+      "Current loss value: 6.3467474\n",
+      "Current loss value: 559.94366\n",
+      "Current loss value: 1163.8842\n",
+      "Current loss value: 1773.7316\n",
+      "Current loss value: 2400.9453\n",
       "model 0 processed in 15s\n",
       "Processing model 1\n",
-      "Current loss value: -3.6865754\n",
-      "Current loss value: 2954.8418\n",
-      "Current loss value: 7442.9756\n",
-      "Current loss value: 12659.539\n",
-      "Current loss value: 17887.756\n",
-      "model 1 processed in 17s\n",
+      "Current loss value: 9.084745\n",
+      "Current loss value: 639.65326\n",
+      "Current loss value: 1325.553\n",
+      "Current loss value: 2061.45\n",
+      "Current loss value: 2771.2717\n",
+      "model 1 processed in 15s\n",
       "Processing model 2\n",
-      "Current loss value: -9.780815\n",
-      "Current loss value: 3333.534\n",
-      "Current loss value: 7773.305\n",
-      "Current loss value: 12799.64\n",
-      "Current loss value: 17782.945\n",
-      "model 2 processed in 15s\n",
+      "Current loss value: 8.078772\n",
+      "Current loss value: 622.2379\n",
+      "Current loss value: 1274.0319\n",
+      "Current loss value: 1989.7207\n",
+      "Current loss value: 2733.297\n",
+      "model 2 processed in 17s\n",
       "Processing model 3\n",
-      "Current loss value: 9.338768\n",
-      "Current loss value: 3378.3467\n",
-      "Current loss value: 8376.837\n",
-      "Current loss value: 13843.301\n",
-      "Current loss value: 19400.018\n",
-      "model 3 processed in 14s\n"
+      "Current loss value: 13.287359\n",
+      "Current loss value: 715.39233\n",
+      "Current loss value: 1481.8386\n",
+      "Current loss value: 2268.9924\n",
+      "Current loss value: 3103.4785\n",
+      "model 3 processed in 15s\n"
      ]
     }
    ],
@@ -208,7 +206,7 @@
     "    layer_output = layer_dict[layer_name].output\n",
     "    loss = 0 # initialize\n",
     "    for filter_index in range(len(fil)):\n",
-    "        loss += thisModel[filter_index] * K.mean(layer_output[:, :, :, filter_index])  # \"-=\" more like a cat and \"+=\" more like a dog\n",
+    "        loss -= thisModel[filter_index] * K.mean(layer_output[:, :, :, filter_index])  # \"-=\" more like a cat and \"+=\" more like a dog\n",
     "\n",
     "    # we compute the gradient of the input picture wrt this loss\n",
     "    grads = K.gradients(loss, input_img)[0]\n",
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,10 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# we will stich the best 64 filters on a 8 x 8 grid.\n",
@@ -299,10 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "input_img_data = img_input\n",
@@ -312,10 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# we will stich the best 64 filters on a 8 x 8 grid.\n",
@@ -351,10 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
@@ -364,10 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# # compare with input_img_data\n",
